--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -4,175 +4,161 @@ If you wrote one, please add it to these tables.
 == Plugins for Public sites ==
 {|
 |-
-!  Search engine name / URL
-!  Plugin author name / e-mail
+!  Search Engine
+!  Author / Github
 !  Version
-!  Last update date
-!  Download link
+!  Last update
+!  Download
 !  Comment
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/tux.png]] [http://linuxtracker.org/ Linux Tracker]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires]
+| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
 | 1.00
-| April 12 2017
+| 12/Apr/2017
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py Download]
-| Python2 & Python3 supported
+| Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15 
 |-
-| [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.png]] [http://www.tntvillage.scambioetico.org/?releaselist TNT Village]
-| ngosang(at) hotmail(dot)es
+| [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.png]][http://www.tntvillage.scambioetico.org/?releaselist TNT Village]
+| ngosang(at)hotmail(dot)es <br /> → [https://github.com/ngosang/qBittorrent-plugins Github]
 | 1.00
-| September 17 2015
+| 17/Oct/2015
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.py Download]
-| Python2 & Python3 supported
+| Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15
 |-
-| [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.png]] [https://www.sumotorrent.sx/ SumoTorrent]
-| ngosang(at) hotmail(dot)es
-| 1.3
-| Sep 25 2015
+| [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.png]][http://www.sumotorrent.sx/ SumoTorrent]
+| ngosang(at)hotmail(dot)es <br /> → [https://github.com/ngosang/qBittorrent-plugins Github]
+| 1.30
+| 25/Sep/2015
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.py Download]
-| Python2 & Python3 supported. qBittorrent 3.3.0+
+| Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.png]] [https://rarbg.to/ RARBG]
-| fsantos.pt (at) hotmail (dot) com
+| fsantos.pt(at)hotmail(dot)com <br /> → [https://github.com/b0nk/qbittorrent-search-plugins/ Github]
 | 1.13
-| July 28 2017
+| 28/July/2017
 | [https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.py Download]
-| Python2 & Python3 supported
+| Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15
 |-
-| [[https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.png]] [http://www.cpasbien.cm/ Cpasbien]
-| davy39(at) hmamail(dot)com
-| 1.1
-| Aug 19 2016
+| [[https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.png]] [http://www.cpabien.tv/ Cpasbien]
+| davy39(at)hmamail(dot)com <br /> → [https://github.com/davy39/qbfrench Github]
+| 1.10
+| 19/Aug/2016
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.py Download]
-| Python2 & Python3 supported
+| Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
-| [[https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.png]] [http://www.torrent9.tv/ Torrent9]
-| davy39(at) hmamail(dot)com
-| 1.1
-| Aug 11 2016
+| [[https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.png]] [http://www.torrent9.cc/ Torrent9]
+| davy39(at)hmamail(dot)com <br /> → [https://github.com/davy39/qbfrench Github]
+| 1.10
+| 11/Aug/2016
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.py Download]
-| Python2 & Python3 supported
-|-
-| [[https://raw.githubusercontent.com/BrunoReX/qbittorrent-search-plugins/master/yts.png]] [http://yts.re/ YTS]
-| brunorex(at) gmail(dot).com
-| 1.0
-| Oct 8 2014
-| [https://raw.githubusercontent.com/BrunoReX/qbittorrent-search-plugins/master/yts.py Download]
-| Outdated
-|-
-| [[https://raw.githubusercontent.com/fvisin/qbittorrent_plugins/master/pirateproxy.png]] [https://pirateproxy.bz/ PirateProxy]
-| fab(at) gnux(dot)info
-| 1.53
-| Sept 30 2014
-| [https://raw.githubusercontent.com/fvisin/qbittorrent_plugins/master/pirateproxy.py Download]
-| Outdated
+| Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/mr-mmajoR/myrepo/master/rutor.png]] [http://rutor.info/ Rutor]
-| mmajor(at) yandex(dot)ru
+| mmajor(at)yandex(dot)ru <br /> → [https://github.com/Pireo/hello-world/ Github]
 | 1.20
-| January 14 2017
+| 14/Jan/2017
 | [https://raw.githubusercontent.com/Pireo/hello-world/master/rutor.py Download]
-| Works with Python 3
+| Works with Python 3.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/2481f766470d6d512432f56c2595147ce298237a/untitled.png]][https://www.limetorrents.cc/ LimeTorrents]
-| [https://github.com/lima66 lima66]
-| 3.07
-| April 18 2017
-| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/limetorrents.py Download] / [https://github.com/lima66/Torrents_Plugin/blob/master/limetorrents.py GitHub]
-| Python2 & Python3 supported. qBittorrent 3.3.12
+| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| 3.09
+| 22/July/2017
+| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/limetorrents.py Download]
+| Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/favicons5.png]] [https://zooqle.com/ Zooqle]
-| [https://github.com/ArionMiles Arion_Miles]
-| 1.11
-| Mar 22, 2016
-| [https://raw.githubusercontent.com/ArionMiles/Zooqle-qBittorrent-Plugin/master/zooqle.py Download] / [https://github.com/ArionMiles/Zooqle-qBittorrent-Plugin GitHub repository]
-| Python2 & Python3 supported. qBittorrent 3.3.10+
+| [https://github.com/ArionMiles Arion_Miles] <br /> → [https://github.com/ArionMiles/Zooqle-qBittorrent-Plugin Github]
+| 1.12
+| 04/Apr/2016
+| [https://raw.githubusercontent.com/ArionMiles/Zooqle-qBittorrent-Plugin/master/zooqle.py Download]
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/1337.png]] [https://1337x.to/ 1337x]
-| [https://github.com/v1k45 v1k45]
+| [https://github.com/v1k45 v1k45] <br /> → [https://github.com/v1k45/1337x-qBittorrent-search-plugin Github]
 | 1.10
-| Mar 26, 2017
-| [https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py Download] / [https://github.com/v1k45/1337x-qBittorrent-search-plugin Github repository]
-| Python2 & Python3 supported.
+| 26/Mar/2017
+| [https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py Download]
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/etree.png]] [http://bt.etree.org/ bt.etree.org]
-| [https://github.com/lima66 lima66]
+| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
 | 1.00
-| April 21 2017
-| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/btetree.py Download] / [https://github.com/lima66/Torrents_Plugin/blob/master/btetree.py GitHub]
-| Python2 & Python3 supported. qBittorrent 3.3.12
+| 21/Apr/2017
+| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/btetree.py Download]
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/rockbox.png]] [http://psychocydd.co.uk RockBox]
-| [https://github.com/lima66 lima66]
+| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
 | 1.01
-| April 23 2017
-| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/psychocydd.py Download] / [https://github.com/lima66/Torrents_Plugin/blob/master/psychocydd.py GitHub]
-| Python2 & Python3 supported. qBittorrent 3.3.12
+| 23/Apr/2017
+| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/psychocydd.py Download]
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/23513d5befe55a84a6f969e7888a3d084d0b54bf/images.png]][http://ilcorsaronero.info IlCorsaroNero]
-| [https://github.com/lima66 lima66]
+| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
 | 1.00
-| April 23 2017
-| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/ilcorsaronero.py Download] / [https://github.com/lima66/Torrents_Plugin/blob/master/ilcorsaronero.py GitHub]
-| Python2 & Python3 supported. qBittorrent 3.3.12
+| 23/Apr/2017
+| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/ilcorsaronero.py Download]
+| Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/favicons.png]] [https://torrentproject.se/ TorrentProject]
-| [https://github.com/lima66 lima66]
-| 1.00
-| April 29 2017
-| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/torrentproject.py Download] / [https://github.com/lima66/Torrents_Plugin/blob/master/torrentproject.py GitHub]
-| Python2 & Python3 supported. qBittorrent 3.3.12
+| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| 1.01
+| 06/May/2017
+| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/torrentproject.py Download]
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
-| [http://www.divxtotal.com/ DivxTotal]
-| hazuki.shiro@gmail.com
-| 1.2
-| May 04 2017
+| [http://www.divxtotal.net/ DivxTotal]
+| hazuki.shiro(at)gmail(dot)com <br /> → [https://github.com/Pireo/hello-world/ Github]
+| 1.20
+| 04/May/2017
 | [https://raw.githubusercontent.com/Pireo/hello-world/master/divxtotal.py Download]
-| Python2 & Python3 supported
+| Python2 supported. <br /> (?) Not Tested
 |-
-| [[https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/raw/master/nyaapantsu.png]][https://nyaa.pantsu.cat/ NyaaPantsu]
-| xux (at) live (dot) ca
+| [[https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/raw/master/nyaapantsu.png]][https://nyaa.pantsu.cat/ Nyaa.Pantsu]
+| xux(at)live(dot)ca <br /> → [https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/ Github]
 | 1.05
-| June 24 2017
+| 24/Jun/2017
 | [https://raw.githubusercontent.com/kenken28/NyaaPantsu-qBittorrent-Plugin/master/nyaapantsu.py Download]
-| Python2 & Python3 supported
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]][https://sukebei.pantsu.cat/ Sukebei.Pantsu]
-| 
-| 1.09
-| Jun 28 2017
+| [https://github.com/4chenz/ 4chenz] <br /> → [https://github.com/4chenz/pantsu-plugin/ Github]
+| 1.11
+| 07/Aug/2017
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/sukebei.py Download]
-| Python2 & Python3 supported
+| Python2 supported. <br /> (?) Not Tested
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]][https://nyaa.pantsu.cat/ Nyaa.Pantsu]
-| 
-| 1.09
-| Jun 28 2017
+| [https://github.com/4chenz/ 4chenz] <br /> → [https://github.com/4chenz/pantsu-plugin/ Github]
+| 1.11
+| 07/Aug/2017
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.py Download]
-| Python2 & Python3 supported
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [https://sukebei.nyaa.si/ Sukebei Nyaa]
-| phuongtm6994 (at) gmail (dot) com
+| phuongtm6994(at)gmail(dot)com <br /> → [https://github.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/ Github]
 | 1.01
-| May 19 2017
+| 19/May/2017
 | [https://raw.githubusercontent.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/master/nyaa.py Download]
-| Python2 supported
+| Python2 supported. <br /> (?) Not Tested
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.png]] 
 [https://nyaa.si/ Nyaa.si]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires]
-| 1.0
-| May 19 2017
+| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
+| 1.00
+| 19/May/2017
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py Download]
-| Python3 & Python2 supported
+| Python3 & Python2 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/skytorrents.png]] 
 [https://skytorrents.in/ Sky Torrents]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires]
-| 1.0
-| May 19 2017
+| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
+| 1.20
+| 20/May/2017
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/skytorrents.py Download]
-| Python3 & Python2 supported
+| Python3 & Python2 supported.<br />✔ qBittorent 3.3.15
 |-
 |}
 
@@ -182,47 +168,51 @@ Those sites require an account and your username/password need to be added into 
 
 {|
 |-
-!  Search engine name / URL
-!  Plugin author name / e-mail
+!  Search Engine
+!  Author / Github
 !  Version
-!  Last update date
-!  Download link
+!  Last update
+!  Download
 !  Comment
 |-
 | [[https://raw.githubusercontent.com/davy39/qbfrench/master/t411.png]] [http://www.t411.ch T411]
-| davy39(at) hmamail(dot)com
-| 1.2
-| Aug 11 2016
-| [https://raw.githubusercontent.com/davy39/qbfrench/master/t411.py Script only] / [https://github.com/davy39/qbfrench/wiki README]*
-| Python2 & Python3 supported
+| davy39(at)hmamail(dot)com <br /> → [https://github.com/davy39/qbfrench Github]
+| 1.20
+| 11/Aug/2016
+| [https://raw.githubusercontent.com/davy39/qbfrench/master/t411.py Download] <br />
+[https://github.com/davy39/qbfrench/wiki README]
+| Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.png]] [http://rutracker.org/ rutracker.org]
-| skymirrh(at) gmail(dot)com
+| skymirrh(at)gmail(dot)com <br /> → [https://github.com/Skymirrh/qBittorrent-rutracker-plugin Github]
 | 1.05
-| July 12 2016
-| [https://github.com/Skymirrh/qBittorrent-rutracker-plugin Download]
-| Python2 & Python3 supported. Tested with qBittorrent 3.3.5.
+| 12/Jul/2016
+| [https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.py Download] <br />
+[ https://github.com/Skymirrh/qBittorrent-rutracker-plugin/blob/master/README.md README]
+| Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.png]] [http://rutracker.org/ rutracker.org]
-| alvin1979(at) mail(dot)ru
+| alvin1979(at)mail(dot)ru <br /> → [https://github.com/alvin1979/qbrutracker Github]
 | 1.00
-| Sep 14 2016
+| 14/Sep/2016
 | [https://github.com/alvin1979/qbrutracker Download]
-| Python3 supported. Tested with qBittorrent 3.3.6.
+| Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/adrianmocan/qbittorrent_plugin_filelist.ro/master/favicon.png]] [https://filelist.ro/ FileList]
-| adrian.mocan(at) gmail(dot)com
-| 1.0
-| Jun 07 2015
-| [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.py Script only] / [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro.zip All files]*
-| Tested with qBittorrent >= 3.1.9
+| adrian.mocan(at)gmail(dot)com <br /> → [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro Github]
+| 1.00
+| 10/Jun/2015
+| [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.py Download] <br />
+[https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.INSTALL_en.txt README]
+| Python2 supported.<br /> (?) Not Tested
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/bakabt.png]] [https://bakabt.me BakaBT]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires]
+| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
 | 1.0.2
-| 2017-03-13
-| [https://github.com/MadeOfMagicAndWires/qBit-plugin/blob/master/engines/bakabt.py Script] / [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugin/master/README.md README]
-| Python 2 & 3 supported.
+| 13/Apr/2017
+| [https://github.com/MadeOfMagicAndWires/qBit-plugin/blob/master/engines/bakabt.py Download] <br />
+[https://github.com/MadeOfMagicAndWires/qBit-plugins/blob/master/README.md README]
+| Python2 & Python3 supported.<br /> (?) Not Tested
 |}
 ''*All files'' is a tarball (.tar.gz) containing script, icon, README & INSTALL files.
 
