--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -6,157 +6,157 @@ If you wrote one, please add it to these tables.
 |-
 !  Search Engine
 !  Author / Github
-!  Version
-!  Last update
+!  Ver.
+!  Update
 !  Download
 !  Comment
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/tux.png]] [http://linuxtracker.org/ Linux Tracker]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
+| [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires Github]
 | 1.00
-| 12/Apr/2017
+| 12/Apr<br />2017
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py Download]
 | Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15 
 |-
 | [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.png]][http://www.tntvillage.scambioetico.org/?releaselist TNT Village]
-| ngosang(at)hotmail(dot)es <br /> → [https://github.com/ngosang/qBittorrent-plugins Github]
+| [https://github.com/ngosang/qBittorrent-plugins ngosang Github]
 | 1.00
-| 17/Oct/2015
+| 17/Oct<br />2015
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/tntvillage/tntvillage.py Download]
 | Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.png]][http://www.sumotorrent.sx/ SumoTorrent]
-| ngosang(at)hotmail(dot)es <br /> → [https://github.com/ngosang/qBittorrent-plugins Github]
+| [https://github.com/ngosang/qBittorrent-plugins ngosang Github]
 | 1.30
-| 25/Sep/2015
+| 25/Sep<br />2015
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.py Download]
 | Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.png]] [https://rarbg.to/ RARBG]
-| fsantos.pt(at)hotmail(dot)com <br /> → [https://github.com/b0nk/qbittorrent-search-plugins/ Github]
+| [https://github.com/b0nk/qbittorrent-search-plugins/ b0nk Github]
 | 1.13
-| 28/July/2017
+| 28/July<br />2017
 | [https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.py Download]
 | Python2 & Python3 supported.<br /> ✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.png]] [http://www.cpabien.tv/ Cpasbien]
-| davy39(at)hmamail(dot)com <br /> → [https://github.com/davy39/qbfrench Github]
+| [https://github.com/davy39/qbfrench davy39 Github]
 | 1.10
-| 19/Aug/2016
+| 19/Aug<br />2016
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/cpasbien.py Download]
 | Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.png]] [http://www.torrent9.cc/ Torrent9]
-| davy39(at)hmamail(dot)com <br /> → [https://github.com/davy39/qbfrench Github]
+| [https://github.com/davy39/qbfrench davy39 Github]
 | 1.10
-| 11/Aug/2016
+| 11/Aug<br />2016
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.py Download]
 | Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/mr-mmajoR/myrepo/master/rutor.png]] [http://rutor.info/ Rutor]
-| mmajor(at)yandex(dot)ru <br /> → [https://github.com/Pireo/hello-world/ Github]
+| [https://github.com/Pireo/hello-world/ Pireo Github]
 | 1.20
-| 14/Jan/2017
+| 14/Jan<br />2017
 | [https://raw.githubusercontent.com/Pireo/hello-world/master/rutor.py Download]
 | Works with Python 3.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/2481f766470d6d512432f56c2595147ce298237a/untitled.png]][https://www.limetorrents.cc/ LimeTorrents]
-| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| [https://github.com/lima66/Torrents_Plugin/ lima66 Github]
 | 3.09
-| 22/July/2017
+| 22/July<br />2017
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/limetorrents.py Download]
 | Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/favicons5.png]] [https://zooqle.com/ Zooqle]
-| [https://github.com/ArionMiles Arion_Miles] <br /> → [https://github.com/ArionMiles/Zooqle-qBittorrent-Plugin Github]
+| [https://github.com/ArionMiles/Zooqle-qBittorrent-Plugin ArionMiles Github]
 | 1.12
-| 04/Apr/2016
+| 04/Apr<br />2016
 | [https://raw.githubusercontent.com/ArionMiles/Zooqle-qBittorrent-Plugin/master/zooqle.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/1337.png]] [https://1337x.to/ 1337x]
-| [https://github.com/v1k45 v1k45] <br /> → [https://github.com/v1k45/1337x-qBittorrent-search-plugin Github]
+| [https://github.com/v1k45/1337x-qBittorrent-search-plugin v1k45 Github]
 | 1.10
-| 26/Mar/2017
+| 26/Mar<br />2017
 | [https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/etree.png]] [http://bt.etree.org/ bt.etree.org]
-| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| [https://github.com/lima66/Torrents_Plugin/ lima66 Github]
 | 1.00
-| 21/Apr/2017
+| 21/Apr<br />2017
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/btetree.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/rockbox.png]] [http://psychocydd.co.uk RockBox]
-| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| [https://github.com/lima66/Torrents_Plugin/ lima66 Github]
 | 1.01
-| 23/Apr/2017
+| 23/Apr<br />2017
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/psychocydd.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/23513d5befe55a84a6f969e7888a3d084d0b54bf/images.png]][http://ilcorsaronero.info IlCorsaroNero]
-| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| [https://github.com/lima66/Torrents_Plugin/ lima66 Github]
 | 1.00
-| 23/Apr/2017
+| 23/Apr<br />2017
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/ilcorsaronero.py Download]
 | Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/favicons.png]] [https://torrentproject.se/ TorrentProject]
-| [https://github.com/lima66 lima66] <br /> → [https://github.com/lima66/Torrents_Plugin/ Github]
+| [https://github.com/lima66/Torrents_Plugin/ lima66 Github]
 | 1.01
-| 06/May/2017
+| 06/May<br />2017
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/torrentproject.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [http://www.divxtotal.net/ DivxTotal]
-| hazuki.shiro(at)gmail(dot)com <br /> → [https://github.com/Pireo/hello-world/ Github]
+| [https://github.com/Pireo/hello-world/ Pireo Github]
 | 1.20
-| 04/May/2017
+| 04/May<br />2017
 | [https://raw.githubusercontent.com/Pireo/hello-world/master/divxtotal.py Download]
 | Python2 supported. <br /> (?) Not Tested
 |-
 | [[https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/raw/master/nyaapantsu.png]][https://nyaa.pantsu.cat/ Nyaa.Pantsu]
-| xux(at)live(dot)ca <br /> → [https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/ Github]
+| [https://github.com/kenken28/NyaaPantsu-qBittorrent-Plugin/ kenken28 Github]
 | 1.05
-| 24/Jun/2017
+| 24/Jun<br />2017
 | [https://raw.githubusercontent.com/kenken28/NyaaPantsu-qBittorrent-Plugin/master/nyaapantsu.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]][https://sukebei.pantsu.cat/ Sukebei.Pantsu]
-| [https://github.com/4chenz/ 4chenz] <br /> → [https://github.com/4chenz/pantsu-plugin/ Github]
+| [https://github.com/4chenz/pantsu-plugin/ 4chenz Github]
 | 1.11
-| 07/Aug/2017
+| 07/Aug<br />2017
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/sukebei.py Download]
 | Python2 supported. <br /> (?) Not Tested
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]][https://nyaa.pantsu.cat/ Nyaa.Pantsu]
-| [https://github.com/4chenz/ 4chenz] <br /> → [https://github.com/4chenz/pantsu-plugin/ Github]
+| [https://github.com/4chenz/pantsu-plugin/ 4chenz Github]
 | 1.11
-| 07/Aug/2017
+| 07/Aug<br />2017
 | [https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.py Download]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [https://sukebei.nyaa.si/ Sukebei Nyaa]
-| phuongtm6994(at)gmail(dot)com <br /> → [https://github.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/ Github]
+| [https://github.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/ phuong<br />tailtranminh Github]
 | 1.01
-| 19/May/2017
+| 19/May<br />2017
 | [https://raw.githubusercontent.com/phuongtailtranminh/qBittorrent-Nyaa-Search-Plugin/master/nyaa.py Download]
 | Python2 supported. <br /> (?) Not Tested
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.png]] 
 [https://nyaa.si/ Nyaa.si]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
+| [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires Github]
 | 1.00
-| 19/May/2017
+| 19/May<br />2017
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py Download]
 | Python3 & Python2 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/skytorrents.png]] 
 [https://skytorrents.in/ Sky Torrents]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
+| [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires Github]
 | 1.20
-| 20/May/2017
+| 20/May<br />2017
 | [https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/skytorrents.py Download]
 | Python3 & Python2 supported.<br />✔ qBittorent 3.3.15
 |-
@@ -170,46 +170,46 @@ Those sites require an account and your username/password need to be added into 
 |-
 !  Search Engine
 !  Author / Github
-!  Version
-!  Last update
+!  Ver.
+!  Update
 !  Download
 !  Comment
 |-
 | [[https://raw.githubusercontent.com/davy39/qbfrench/master/t411.png]] [http://www.t411.ch T411]
-| davy39(at)hmamail(dot)com <br /> → [https://github.com/davy39/qbfrench Github]
+| [https://github.com/davy39/qbfrench davy39 Github]
 | 1.20
-| 11/Aug/2016
+| 11/Aug<br />2016
 | [https://raw.githubusercontent.com/davy39/qbfrench/master/t411.py Download] <br />
 [https://github.com/davy39/qbfrench/wiki README]
 | Python2 & Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.png]] [http://rutracker.org/ rutracker.org]
-| skymirrh(at)gmail(dot)com <br /> → [https://github.com/Skymirrh/qBittorrent-rutracker-plugin Github]
+| [https://github.com/Skymirrh/qBittorrent-rutracker-plugin Skymirrh Github]
 | 1.05
-| 12/Jul/2016
+| 12/Jul<br />2016
 | [https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.py Download] <br />
 [ https://github.com/Skymirrh/qBittorrent-rutracker-plugin/blob/master/README.md README]
 | Python2 & Python3 supported.<br />✔ qBittorent 3.3.15
 |-
 | [[https://raw.githubusercontent.com/Skymirrh/qBittorrent-rutracker-plugin/master/rutracker.png]] [http://rutracker.org/ rutracker.org]
-| alvin1979(at)mail(dot)ru <br /> → [https://github.com/alvin1979/qbrutracker Github]
+| [https://github.com/alvin1979/qbrutracker alvin1979 Github]
 | 1.00
-| 14/Sep/2016
+| 14/Sep<br />2016
 | [https://github.com/alvin1979/qbrutracker Download]
 | Python3 supported.<br /> ✖ Outdated/Not Working
 |-
 | [[https://raw.githubusercontent.com/adrianmocan/qbittorrent_plugin_filelist.ro/master/favicon.png]] [https://filelist.ro/ FileList]
-| adrian.mocan(at)gmail(dot)com <br /> → [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro Github]
+| [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro adrianmocan Github]
 | 1.00
-| 10/Jun/2015
+| 10/Jun<br />2015
 | [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.py Download] <br />
 [https://github.com/adrianmocan/qbittorrent_plugin_filelist.ro/blob/master/filelist_ro/filelist.INSTALL_en.txt README]
 | Python2 supported.<br /> (?) Not Tested
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/bakabt.png]] [https://bakabt.me BakaBT]
-| [https://github.com/MadeOfMagicAndWires/ Made of Magic and Wires] <br /> → [https://github.com/MadeOfMagicAndWires/qBit-plugins Github]
+| [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic <br />And Wires Github]
 | 1.0.2
-| 13/Apr/2017
+| 13/Apr<br />2017
 | [https://github.com/MadeOfMagicAndWires/qBit-plugin/blob/master/engines/bakabt.py Download] <br />
 [https://github.com/MadeOfMagicAndWires/qBit-plugins/blob/master/README.md README]
 | Python2 & Python3 supported.<br /> (?) Not Tested
