--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -12,12 +12,20 @@ If you wrote one, please add it to these tables.
 !  Download
 !  Comment
 |-
-| [[https://github.com/Pireo/hello-world/blob/master/kickass.png]] [https://kickass.cd/ Kickass.cd]
-| [https://github.com/CharitooDunamis CharitooDunamis]
+| [[https://github.com/ebukari/qbittorrent-plugins/blob/master/torrentfunk.png]] [https://torrentfunk.com/ TorrentFunk]
+| [https://github.com/ebukari Ezekiel N Bukari]
+| 1.00
+| 7/Sept<br />2017
+| [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
+| [https://raw.githubusercontent.com/ebukari/qbittorrent-plugins/master/kickass.py Download]
+| Python2 & Python3<br /> ✔ qb 3.4.x
+|-
+| [[https://github.com/ebukari/qbittorrent-plugins/blob/master/kickass.png]] [https://kickass.cd/ Kickass.cd]
+| [https://github.com/ebukari Ezekiel N Bukari]
 | 1.00
 | 2/Sept<br />2017
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
-| [https://raw.githubusercontent.com/CharitooDunamis/kickass-plugin/master/kickass.py Download]
+| [https://raw.githubusercontent.com/ebukari/qbittorrent-plugins/master/kickass.py Download]
 | Python2 & Python3<br /> ✔ qb 3.4.x
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/tux.png]] [http://linuxtracker.org/ Linux Tracker]
