--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -8,7 +8,7 @@ If you wrote one, please add it to these tables.
 !  Author / Github
 !  Ver.
 !  Update
-!  
+!  Lang.
 !  Download
 !  Comment
 |-
@@ -50,7 +50,7 @@ If you wrote one, please add it to these tables.
 | 25/Sep<br />2015
 | [[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
 | [https://raw.githubusercontent.com/ngosang/qBittorrent-plugins/master/sumotorrent/sumotorrent.py Download]
-| Python2 & Python3<br /> ✔ qb 3.3.15
+| Python2 & Python3<br /> ✔ qb 3.4.x
 |-
 | [[https://raw.githubusercontent.com/b0nk/qbittorrent-search-plugins/master/rarbg.png]] [https://rarbg.to/ RARBG]
 | [https://github.com/b0nk/qbittorrent-search-plugins/ b0nk]
@@ -204,7 +204,7 @@ Those sites require an account and your username/password need to be added into 
 !  Author / Github
 !  Ver.
 !  Update
-!  
+!  Lang.
 !  Download
 !  Comment
 |-
