--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -9,7 +9,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 {|
 |-
 !  Search Engine
-!  Author / Github
+!  Author (Repository)
 !  Ver.
 !  Update
 !  Lang.
@@ -205,7 +205,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 {|
 |-
 !  Search Engine
-!  Author / Github
+!  Author (Repository)
 !  Ver.
 !  Update
 !  Lang.
